added the express env

--- a/config/gmaps_api_key.yml
+++ b/config/gmaps_api_key.yml
@@ -12,3 +12,6 @@ test:
 production:
   ABQIAAAAa7SFeUyLeV9ADXW6EhbOsBTv6-6POP26rMAbqeA492fvcL7fjRSkyJ0vLxFdgAZjR_-H_IPs112aBg
   
+express:
+    ABQIAAAAa7SFeUyLeV9ADXW6EhbOsBTv6-6POP26rMAbqeA492fvcL7fjRSkyJ0vLxFdgAZjR_-H_IPs112aBg
+ 
