--- a/spec/fixtures/surveys.yml
+++ b/spec/fixtures/surveys.yml
@@ -1,7 +1,6 @@
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
-
-one:
-  title: MyString
-
-two:
-  title: MyString
+--- 
+- - surveys_001
+  - updated_at: 2008-09-06 04:41:47
+    title: 
+    id: "1"
+    created_at: 2008-09-06 04:41:47
