--- a/test/fixtures/answers.yml
+++ b/test/fixtures/answers.yml
@@ -665,3 +665,669 @@
     farm_id: 
     stage_id: "7"
     created_at: 2008-09-06 04:41:48
+- - answers_075
+  - updated_at: 2008-09-07 10:34:53
+    text: Shoaib
+    question_id: "1"
+    survey_id: "2"
+    id: "75"
+    farm_id: 
+    stage_id: "1"
+    created_at: 2008-09-06 09:38:35
+- - answers_076
+  - updated_at: 2008-09-07 10:34:53
+    text: Burq
+    question_id: "2"
+    survey_id: "2"
+    id: "76"
+    farm_id: 
+    stage_id: "1"
+    created_at: 2008-09-06 09:38:35
+- - answers_077
+  - updated_at: 2008-09-07 10:34:53
+    text: ""
+    question_id: "3"
+    survey_id: "2"
+    id: "77"
+    farm_id: 
+    stage_id: "1"
+    created_at: 2008-09-06 09:38:35
+- - answers_078
+  - updated_at: 2008-09-06 09:38:35
+    text: 
+    question_id: "4"
+    survey_id: "2"
+    id: "78"
+    farm_id: 
+    stage_id: "1"
+    created_at: 2008-09-06 09:38:35
+- - answers_079
+  - updated_at: 2008-09-07 10:34:53
+    text: ""
+    question_id: "5"
+    survey_id: "2"
+    id: "79"
+    farm_id: 
+    stage_id: "1"
+    created_at: 2008-09-06 09:38:35
+- - answers_080
+  - updated_at: 2008-09-07 10:34:53
+    text: ""
+    question_id: "6"
+    survey_id: "2"
+    id: "80"
+    farm_id: 
+    stage_id: "1"
+    created_at: 2008-09-06 09:38:35
+- - answers_081
+  - updated_at: 2008-09-07 10:34:53
+    text: ""
+    question_id: "7"
+    survey_id: "2"
+    id: "81"
+    farm_id: 
+    stage_id: "1"
+    created_at: 2008-09-06 09:38:35
+- - answers_082
+  - updated_at: 2008-09-07 10:34:53
+    text: ""
+    question_id: "8"
+    survey_id: "2"
+    id: "82"
+    farm_id: 
+    stage_id: "1"
+    created_at: 2008-09-06 09:38:35
+- - answers_083
+  - updated_at: 2008-09-06 09:38:35
+    text: 
+    question_id: "9"
+    survey_id: "2"
+    id: "83"
+    farm_id: 
+    stage_id: "1"
+    created_at: 2008-09-06 09:38:35
+- - answers_084
+  - updated_at: 2008-09-06 09:38:35
+    text: 
+    question_id: "10"
+    survey_id: "2"
+    id: "84"
+    farm_id: 
+    stage_id: "1"
+    created_at: 2008-09-06 09:38:35
+- - answers_085
+  - updated_at: 2008-09-07 10:34:53
+    text: ""
+    question_id: "11"
+    survey_id: "2"
+    id: "85"
+    farm_id: 
+    stage_id: "1"
+    created_at: 2008-09-06 09:38:35
+- - answers_086
+  - updated_at: 2008-09-07 10:35:58
+    text: "100"
+    question_id: "12"
+    survey_id: "2"
+    id: "86"
+    farm_id: 
+    stage_id: "2"
+    created_at: 2008-09-06 09:38:35
+- - answers_087
+  - updated_at: 2008-09-07 10:35:58
+    text: "23"
+    question_id: "13"
+    survey_id: "2"
+    id: "87"
+    farm_id: 
+    stage_id: "2"
+    created_at: 2008-09-06 09:38:35
+- - answers_088
+  - updated_at: 2008-09-07 10:35:58
+    text: "34"
+    question_id: "14"
+    survey_id: "2"
+    id: "88"
+    farm_id: 
+    stage_id: "2"
+    created_at: 2008-09-06 09:38:35
+- - answers_089
+  - updated_at: 2008-09-07 10:35:58
+    text: "3"
+    question_id: "15"
+    survey_id: "2"
+    id: "89"
+    farm_id: 
+    stage_id: "2"
+    created_at: 2008-09-06 09:38:35
+- - answers_090
+  - updated_at: 2008-09-07 10:35:58
+    text: "23"
+    question_id: "16"
+    survey_id: "2"
+    id: "90"
+    farm_id: 
+    stage_id: "2"
+    created_at: 2008-09-06 09:38:35
+- - answers_091
+  - updated_at: 2008-09-06 09:38:35
+    text: 
+    question_id: "17"
+    survey_id: "2"
+    id: "91"
+    farm_id: 
+    stage_id: "2"
+    created_at: 2008-09-06 09:38:35
+- - answers_092
+  - updated_at: 2008-09-07 10:35:58
+    text: "12"
+    question_id: "18"
+    survey_id: "2"
+    id: "92"
+    farm_id: 
+    stage_id: "2"
+    created_at: 2008-09-06 09:38:35
+- - answers_093
+  - updated_at: 2008-09-07 10:35:58
+    text: "34"
+    question_id: "19"
+    survey_id: "2"
+    id: "93"
+    farm_id: 
+    stage_id: "2"
+    created_at: 2008-09-06 09:38:35
+- - answers_094
+  - updated_at: 2008-09-07 10:35:58
+    text: "32"
+    question_id: "20"
+    survey_id: "2"
+    id: "94"
+    farm_id: 
+    stage_id: "2"
+    created_at: 2008-09-06 09:38:35
+- - answers_095
+  - updated_at: 2008-09-07 10:35:58
+    text: "23"
+    question_id: "21"
+    survey_id: "2"
+    id: "95"
+    farm_id: 
+    stage_id: "2"
+    created_at: 2008-09-06 09:38:35
+- - answers_096
+  - updated_at: 2008-09-06 09:38:35
+    text: 
+    question_id: "22"
+    survey_id: "2"
+    id: "96"
+    farm_id: 
+    stage_id: "2"
+    created_at: 2008-09-06 09:38:35
+- - answers_097
+  - updated_at: 2008-09-07 10:35:58
+    text: yea
+    question_id: "23"
+    survey_id: "2"
+    id: "97"
+    farm_id: 
+    stage_id: "2"
+    created_at: 2008-09-06 09:38:35
+- - answers_098
+  - updated_at: 2008-09-06 09:38:35
+    text: 
+    question_id: "24"
+    survey_id: "2"
+    id: "98"
+    farm_id: 
+    stage_id: "2"
+    created_at: 2008-09-06 09:38:35
+- - answers_099
+  - updated_at: 2008-09-06 09:38:35
+    text: 
+    question_id: "25"
+    survey_id: "2"
+    id: "99"
+    farm_id: 
+    stage_id: "2"
+    created_at: 2008-09-06 09:38:35
+- - answers_100
+  - updated_at: 2008-09-06 09:38:35
+    text: 
+    question_id: "26"
+    survey_id: "2"
+    id: "100"
+    farm_id: 
+    stage_id: "2"
+    created_at: 2008-09-06 09:38:35
+- - answers_101
+  - updated_at: 2008-09-06 09:38:35
+    text: 
+    question_id: "27"
+    survey_id: "2"
+    id: "101"
+    farm_id: 
+    stage_id: "2"
+    created_at: 2008-09-06 09:38:35
+- - answers_102
+  - updated_at: 2008-09-07 10:37:55
+    text: time
+    question_id: "28"
+    survey_id: "2"
+    id: "102"
+    farm_id: 
+    stage_id: "3"
+    created_at: 2008-09-06 09:38:35
+- - answers_103
+  - updated_at: 2008-09-07 10:37:55
+    text: motivation
+    question_id: "29"
+    survey_id: "2"
+    id: "103"
+    farm_id: 
+    stage_id: "3"
+    created_at: 2008-09-06 09:38:35
+- - answers_104
+  - updated_at: 2008-09-07 10:37:55
+    text: lots of land
+    question_id: "30"
+    survey_id: "2"
+    id: "104"
+    farm_id: 
+    stage_id: "3"
+    created_at: 2008-09-06 09:38:35
+- - answers_105
+  - updated_at: 2008-09-07 10:37:55
+    text: yes... bob
+    question_id: "31"
+    survey_id: "2"
+    id: "105"
+    farm_id: 
+    stage_id: "3"
+    created_at: 2008-09-06 09:38:35
+- - answers_106
+  - updated_at: 2008-09-07 10:37:55
+    text: Hemingway
+    question_id: "32"
+    survey_id: "2"
+    id: "106"
+    farm_id: 
+    stage_id: "3"
+    created_at: 2008-09-06 09:38:35
+- - answers_107
+  - updated_at: 2008-09-07 10:37:55
+    text: "Tolkin "
+    question_id: "33"
+    survey_id: "2"
+    id: "107"
+    farm_id: 
+    stage_id: "3"
+    created_at: 2008-09-06 09:38:35
+- - answers_108
+  - updated_at: 2008-09-06 09:38:35
+    text: 
+    question_id: "34"
+    survey_id: "2"
+    id: "108"
+    farm_id: 
+    stage_id: "3"
+    created_at: 2008-09-06 09:38:35
+- - answers_109
+  - updated_at: 2008-09-06 09:38:35
+    text: 
+    question_id: "35"
+    survey_id: "2"
+    id: "109"
+    farm_id: 
+    stage_id: "3"
+    created_at: 2008-09-06 09:38:35
+- - answers_110
+  - updated_at: 2008-09-07 10:37:55
+    text: "yes"
+    question_id: "36"
+    survey_id: "2"
+    id: "110"
+    farm_id: 
+    stage_id: "3"
+    created_at: 2008-09-06 09:38:35
+- - answers_111
+  - updated_at: 2008-09-06 09:38:35
+    text: 
+    question_id: "37"
+    survey_id: "2"
+    id: "111"
+    farm_id: 
+    stage_id: "4"
+    created_at: 2008-09-06 09:38:35
+- - answers_112
+  - updated_at: 2008-09-07 10:41:22
+    text: CFA
+    question_id: "38"
+    survey_id: "2"
+    id: "112"
+    farm_id: 
+    stage_id: "4"
+    created_at: 2008-09-06 09:38:35
+- - answers_113
+  - updated_at: 2008-09-06 09:38:35
+    text: 
+    question_id: "39"
+    survey_id: "2"
+    id: "113"
+    farm_id: 
+    stage_id: "4"
+    created_at: 2008-09-06 09:38:35
+- - answers_114
+  - updated_at: 2008-09-07 10:41:22
+    text: CFA
+    question_id: "40"
+    survey_id: "2"
+    id: "114"
+    farm_id: 
+    stage_id: "4"
+    created_at: 2008-09-06 09:38:35
+- - answers_115
+  - updated_at: 2008-09-07 10:41:22
+    text: CDF
+    question_id: "41"
+    survey_id: "2"
+    id: "115"
+    farm_id: 
+    stage_id: "4"
+    created_at: 2008-09-06 09:38:35
+- - answers_116
+  - updated_at: 2008-09-07 10:41:21
+    text: "Yes"
+    question_id: "42"
+    survey_id: "2"
+    id: "116"
+    farm_id: 
+    stage_id: "4"
+    created_at: 2008-09-06 09:38:35
+- - answers_117
+  - updated_at: 2008-09-07 10:41:21
+    text: Markets
+    question_id: "43"
+    survey_id: "2"
+    id: "117"
+    farm_id: 
+    stage_id: "4"
+    created_at: 2008-09-06 09:38:35
+- - answers_118
+  - updated_at: 2008-09-06 09:38:35
+    text: 
+    question_id: "44"
+    survey_id: "2"
+    id: "118"
+    farm_id: 
+    stage_id: "4"
+    created_at: 2008-09-06 09:38:35
+- - answers_119
+  - updated_at: 2008-09-07 10:41:22
+    text: "120000"
+    question_id: "45"
+    survey_id: "2"
+    id: "119"
+    farm_id: 
+    stage_id: "4"
+    created_at: 2008-09-06 09:38:35
+- - answers_120
+  - updated_at: 2008-09-06 09:38:35
+    text: 
+    question_id: "46"
+    survey_id: "2"
+    id: "120"
+    farm_id: 
+    stage_id: "4"
+    created_at: 2008-09-06 09:38:35
+- - answers_121
+  - updated_at: 2008-09-07 10:41:22
+    text: Asian
+    question_id: "47"
+    survey_id: "2"
+    id: "121"
+    farm_id: 
+    stage_id: "4"
+    created_at: 2008-09-06 09:38:35
+- - answers_122
+  - updated_at: 2008-09-06 09:38:35
+    text: 
+    question_id: "48"
+    survey_id: "2"
+    id: "122"
+    farm_id: 
+    stage_id: "4"
+    created_at: 2008-09-06 09:38:35
+- - answers_123
+  - updated_at: 2008-09-07 10:42:39
+    text: "120"
+    question_id: "49"
+    survey_id: "2"
+    id: "123"
+    farm_id: 
+    stage_id: "5"
+    created_at: 2008-09-06 09:38:35
+- - answers_124
+  - updated_at: 2008-09-07 10:42:39
+    text: "240"
+    question_id: "50"
+    survey_id: "2"
+    id: "124"
+    farm_id: 
+    stage_id: "5"
+    created_at: 2008-09-06 09:38:35
+- - answers_125
+  - updated_at: 2008-09-07 10:42:39
+    text: "12000"
+    question_id: "51"
+    survey_id: "2"
+    id: "125"
+    farm_id: 
+    stage_id: "5"
+    created_at: 2008-09-06 09:38:35
+- - answers_126
+  - updated_at: 2008-09-07 10:42:39
+    text: "12000"
+    question_id: "52"
+    survey_id: "2"
+    id: "126"
+    farm_id: 
+    stage_id: "5"
+    created_at: 2008-09-06 09:38:35
+- - answers_127
+  - updated_at: 2008-09-07 10:42:39
+    text: "Yes"
+    question_id: "53"
+    survey_id: "2"
+    id: "127"
+    farm_id: 
+    stage_id: "5"
+    created_at: 2008-09-06 09:38:35
+- - answers_128
+  - updated_at: 2008-09-06 09:38:35
+    text: 
+    question_id: "54"
+    survey_id: "2"
+    id: "128"
+    farm_id: 
+    stage_id: "6"
+    created_at: 2008-09-06 09:38:35
+- - answers_129
+  - updated_at: 2008-09-07 10:43:25
+    text: nope
+    question_id: "55"
+    survey_id: "2"
+    id: "129"
+    farm_id: 
+    stage_id: "6"
+    created_at: 2008-09-06 09:38:36
+- - answers_130
+  - updated_at: 2008-09-06 09:38:36
+    text: 
+    question_id: "56"
+    survey_id: "2"
+    id: "130"
+    farm_id: 
+    stage_id: "6"
+    created_at: 2008-09-06 09:38:36
+- - answers_131
+  - updated_at: 2008-09-07 10:43:25
+    text: "23"
+    question_id: "57"
+    survey_id: "2"
+    id: "131"
+    farm_id: 
+    stage_id: "6"
+    created_at: 2008-09-06 09:38:36
+- - answers_132
+  - updated_at: 2008-09-06 09:38:36
+    text: 
+    question_id: "58"
+    survey_id: "2"
+    id: "132"
+    farm_id: 
+    stage_id: "6"
+    created_at: 2008-09-06 09:38:36
+- - answers_133
+  - updated_at: 2008-09-07 10:43:25
+    text: "12"
+    question_id: "59"
+    survey_id: "2"
+    id: "133"
+    farm_id: 
+    stage_id: "6"
+    created_at: 2008-09-06 09:38:36
+- - answers_134
+  - updated_at: 2008-09-07 10:43:26
+    text: "Yes"
+    question_id: "60"
+    survey_id: "2"
+    id: "134"
+    farm_id: 
+    stage_id: "6"
+    created_at: 2008-09-06 09:38:36
+- - answers_135
+  - updated_at: 2008-09-07 10:43:26
+    text: "Yes"
+    question_id: "61"
+    survey_id: "2"
+    id: "135"
+    farm_id: 
+    stage_id: "6"
+    created_at: 2008-09-06 09:38:36
+- - answers_136
+  - updated_at: 2008-09-06 09:38:36
+    text: 
+    question_id: "62"
+    survey_id: "2"
+    id: "136"
+    farm_id: 
+    stage_id: "6"
+    created_at: 2008-09-06 09:38:36
+- - answers_137
+  - updated_at: 2008-09-07 10:43:26
+    text: "Yes"
+    question_id: "63"
+    survey_id: "2"
+    id: "137"
+    farm_id: 
+    stage_id: "6"
+    created_at: 2008-09-06 09:38:36
+- - answers_138
+  - updated_at: 2008-09-07 10:43:25
+    text: "Yes"
+    question_id: "64"
+    survey_id: "2"
+    id: "138"
+    farm_id: 
+    stage_id: "6"
+    created_at: 2008-09-06 09:38:36
+- - answers_139
+  - updated_at: 2008-09-07 10:44:33
+    text: "112345"
+    question_id: "65"
+    survey_id: "2"
+    id: "139"
+    farm_id: 
+    stage_id: "7"
+    created_at: 2008-09-06 09:38:36
+- - answers_140
+  - updated_at: 2008-09-07 10:44:33
+    text: saburq@gmail.com
+    question_id: "66"
+    survey_id: "2"
+    id: "140"
+    farm_id: 
+    stage_id: "7"
+    created_at: 2008-09-06 09:38:36
+- - answers_141
+  - updated_at: 2008-09-07 10:44:33
+    text: nomad-labs.com
+    question_id: "67"
+    survey_id: "2"
+    id: "141"
+    farm_id: 
+    stage_id: "7"
+    created_at: 2008-09-06 09:38:36
+- - answers_142
+  - updated_at: 2008-09-07 10:44:33
+    text: 23 Pitt St
+    question_id: "68"
+    survey_id: "2"
+    id: "142"
+    farm_id: 
+    stage_id: "7"
+    created_at: 2008-09-06 09:38:36
+- - answers_143
+  - updated_at: 2008-09-07 10:44:33
+    text: New York
+    question_id: "69"
+    survey_id: "2"
+    id: "143"
+    farm_id: 
+    stage_id: "7"
+    created_at: 2008-09-06 09:38:36
+- - answers_144
+  - updated_at: 2008-09-07 10:44:33
+    text: NY
+    question_id: "70"
+    survey_id: "2"
+    id: "144"
+    farm_id: 
+    stage_id: "7"
+    created_at: 2008-09-06 09:38:36
+- - answers_145
+  - updated_at: 2008-09-07 10:44:33
+    text: "10002"
+    question_id: "71"
+    survey_id: "2"
+    id: "145"
+    farm_id: 
+    stage_id: "7"
+    created_at: 2008-09-06 09:38:36
+- - answers_146
+  - updated_at: 2008-09-07 10:44:33
+    text: US
+    question_id: "72"
+    survey_id: "2"
+    id: "146"
+    farm_id: 
+    stage_id: "7"
+    created_at: 2008-09-06 09:38:36
+- - answers_147
+  - updated_at: 2008-09-07 10:44:33
+    text: "40.715828"
+    question_id: "73"
+    survey_id: "2"
+    id: "147"
+    farm_id: 
+    stage_id: "7"
+    created_at: 2008-09-06 09:38:36
+- - answers_148
+  - updated_at: 2008-09-07 10:44:33
+    text: "-73.983875"
+    question_id: "74"
+    survey_id: "2"
+    id: "148"
+    farm_id: 
+    stage_id: "7"
+    created_at: 2008-09-06 09:38:36
