--- a/test/fixtures/answers_options.yml
+++ b/test/fixtures/answers_options.yml
@@ -50,3 +50,72 @@
 - - answers_options_017
   - answer_id: "54"
     option_id: "51"
+- - answers_options_018
+  - answer_id: "99"
+    option_id: "25"
+- - answers_options_019
+  - answer_id: "91"
+    option_id: "19"
+- - answers_options_020
+  - answer_id: "100"
+    option_id: "27"
+- - answers_options_021
+  - answer_id: "101"
+    option_id: "29"
+- - answers_options_022
+  - answer_id: "96"
+    option_id: "22"
+- - answers_options_023
+  - answer_id: "98"
+    option_id: "23"
+- - answers_options_024
+  - answer_id: "108"
+    option_id: "31"
+- - answers_options_025
+  - answer_id: "108"
+    option_id: "32"
+- - answers_options_026
+  - answer_id: "108"
+    option_id: "33"
+- - answers_options_027
+  - answer_id: "109"
+    option_id: "34"
+- - answers_options_028
+  - answer_id: "118"
+    option_id: "41"
+- - answers_options_029
+  - answer_id: "120"
+    option_id: "45"
+- - answers_options_030
+  - answer_id: "122"
+    option_id: "47"
+- - answers_options_031
+  - answer_id: "111"
+    option_id: "36"
+- - answers_options_032
+  - answer_id: "113"
+    option_id: "38"
+- - answers_options_033
+  - answer_id: "113"
+    option_id: "39"
+- - answers_options_034
+  - answer_id: "113"
+    option_id: "40"
+- - answers_options_035
+  - answer_id: "128"
+    option_id: "49"
+- - answers_options_036
+  - answer_id: "128"
+    option_id: "50"
+- - answers_options_037
+  - answer_id: "128"
+    option_id: "51"
+- - answers_options_038
+  - answer_id: "130"
+    option_id: "53"
+- - answers_options_039
+  - answer_id: "132"
+    option_id: "55"
+- - answers_options_040
+  - answer_id: "136"
+    option_id: "57"
