--- a/test/fixtures/questions_surveys.yml
+++ b/test/fixtures/questions_surveys.yml
@@ -221,3 +221,225 @@
 - - questions_surveys_074
   - question_id: "74"
     survey_id: "1"
+- - questions_surveys_075
+  - question_id: "1"
+    survey_id: "2"
+- - questions_surveys_076
+  - question_id: "2"
+    survey_id: "2"
+- - questions_surveys_077
+  - question_id: "3"
+    survey_id: "2"
+- - questions_surveys_078
+  - question_id: "4"
+    survey_id: "2"
+- - questions_surveys_079
+  - question_id: "5"
+    survey_id: "2"
+- - questions_surveys_080
+  - question_id: "6"
+    survey_id: "2"
+- - questions_surveys_081
+  - question_id: "7"
+    survey_id: "2"
+- - questions_surveys_082
+  - question_id: "8"
+    survey_id: "2"
+- - questions_surveys_083
+  - question_id: "9"
+    survey_id: "2"
+- - questions_surveys_084
+  - question_id: "10"
+    survey_id: "2"
+- - questions_surveys_085
+  - question_id: "11"
+    survey_id: "2"
+- - questions_surveys_086
+  - question_id: "12"
+    survey_id: "2"
+- - questions_surveys_087
+  - question_id: "13"
+    survey_id: "2"
+- - questions_surveys_088
+  - question_id: "14"
+    survey_id: "2"
+- - questions_surveys_089
+  - question_id: "15"
+    survey_id: "2"
+- - questions_surveys_090
+  - question_id: "16"
+    survey_id: "2"
+- - questions_surveys_091
+  - question_id: "17"
+    survey_id: "2"
+- - questions_surveys_092
+  - question_id: "18"
+    survey_id: "2"
+- - questions_surveys_093
+  - question_id: "19"
+    survey_id: "2"
+- - questions_surveys_094
+  - question_id: "20"
+    survey_id: "2"
+- - questions_surveys_095
+  - question_id: "21"
+    survey_id: "2"
+- - questions_surveys_096
+  - question_id: "22"
+    survey_id: "2"
+- - questions_surveys_097
+  - question_id: "23"
+    survey_id: "2"
+- - questions_surveys_098
+  - question_id: "24"
+    survey_id: "2"
+- - questions_surveys_099
+  - question_id: "25"
+    survey_id: "2"
+- - questions_surveys_100
+  - question_id: "26"
+    survey_id: "2"
+- - questions_surveys_101
+  - question_id: "27"
+    survey_id: "2"
+- - questions_surveys_102
+  - question_id: "28"
+    survey_id: "2"
+- - questions_surveys_103
+  - question_id: "29"
+    survey_id: "2"
+- - questions_surveys_104
+  - question_id: "30"
+    survey_id: "2"
+- - questions_surveys_105
+  - question_id: "31"
+    survey_id: "2"
+- - questions_surveys_106
+  - question_id: "32"
+    survey_id: "2"
+- - questions_surveys_107
+  - question_id: "33"
+    survey_id: "2"
+- - questions_surveys_108
+  - question_id: "34"
+    survey_id: "2"
+- - questions_surveys_109
+  - question_id: "35"
+    survey_id: "2"
+- - questions_surveys_110
+  - question_id: "36"
+    survey_id: "2"
+- - questions_surveys_111
+  - question_id: "37"
+    survey_id: "2"
+- - questions_surveys_112
+  - question_id: "38"
+    survey_id: "2"
+- - questions_surveys_113
+  - question_id: "39"
+    survey_id: "2"
+- - questions_surveys_114
+  - question_id: "40"
+    survey_id: "2"
+- - questions_surveys_115
+  - question_id: "41"
+    survey_id: "2"
+- - questions_surveys_116
+  - question_id: "42"
+    survey_id: "2"
+- - questions_surveys_117
+  - question_id: "43"
+    survey_id: "2"
+- - questions_surveys_118
+  - question_id: "44"
+    survey_id: "2"
+- - questions_surveys_119
+  - question_id: "45"
+    survey_id: "2"
+- - questions_surveys_120
+  - question_id: "46"
+    survey_id: "2"
+- - questions_surveys_121
+  - question_id: "47"
+    survey_id: "2"
+- - questions_surveys_122
+  - question_id: "48"
+    survey_id: "2"
+- - questions_surveys_123
+  - question_id: "49"
+    survey_id: "2"
+- - questions_surveys_124
+  - question_id: "50"
+    survey_id: "2"
+- - questions_surveys_125
+  - question_id: "51"
+    survey_id: "2"
+- - questions_surveys_126
+  - question_id: "52"
+    survey_id: "2"
+- - questions_surveys_127
+  - question_id: "53"
+    survey_id: "2"
+- - questions_surveys_128
+  - question_id: "54"
+    survey_id: "2"
+- - questions_surveys_129
+  - question_id: "55"
+    survey_id: "2"
+- - questions_surveys_130
+  - question_id: "56"
+    survey_id: "2"
+- - questions_surveys_131
+  - question_id: "57"
+    survey_id: "2"
+- - questions_surveys_132
+  - question_id: "58"
+    survey_id: "2"
+- - questions_surveys_133
+  - question_id: "59"
+    survey_id: "2"
+- - questions_surveys_134
+  - question_id: "60"
+    survey_id: "2"
+- - questions_surveys_135
+  - question_id: "61"
+    survey_id: "2"
+- - questions_surveys_136
+  - question_id: "62"
+    survey_id: "2"
+- - questions_surveys_137
+  - question_id: "63"
+    survey_id: "2"
+- - questions_surveys_138
+  - question_id: "64"
+    survey_id: "2"
+- - questions_surveys_139
+  - question_id: "65"
+    survey_id: "2"
+- - questions_surveys_140
+  - question_id: "66"
+    survey_id: "2"
+- - questions_surveys_141
+  - question_id: "67"
+    survey_id: "2"
+- - questions_surveys_142
+  - question_id: "68"
+    survey_id: "2"
+- - questions_surveys_143
+  - question_id: "69"
+    survey_id: "2"
+- - questions_surveys_144
+  - question_id: "70"
+    survey_id: "2"
+- - questions_surveys_145
+  - question_id: "71"
+    survey_id: "2"
+- - questions_surveys_146
+  - question_id: "72"
+    survey_id: "2"
+- - questions_surveys_147
+  - question_id: "73"
+    survey_id: "2"
+- - questions_surveys_148
+  - question_id: "74"
+    survey_id: "2"
