--- a/test/fixtures/surveys.yml
+++ b/test/fixtures/surveys.yml
@@ -4,3 +4,8 @@
     title: 
     id: "1"
     created_at: 2008-09-06 04:41:47
+- - surveys_002
+  - updated_at: 2008-09-06 09:38:34
+    title: 
+    id: "2"
+    created_at: 2008-09-06 09:38:34
